feat: POST /users now returns user's information including initial password
